################################################################################
### Copyright 2007 VMware, Inc.  All rights reserved.
###
### This program is free software; you can redistribute it and/or modify
### it under the terms of version 2 of the GNU General Public License as
### published by the Free Software Foundation.
###
### This program is distributed in the hope that it will be useful,
### but WITHOUT ANY WARRANTY; without even the implied warranty of
### MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
### GNU General Public License for more details.
###
### You should have received a copy of the GNU General Public License
### along with this program; if not, write to the Free Software
### Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
################################################################################

noinst_LIBRARIES = libSLPv2Parser.a

libSLPv2Parser_a_SOURCES =
libSLPv2Parser_a_SOURCES += SLPv2MsgParser.c
libSLPv2Parser_a_SOURCES += SLPv2Match.c
libSLPv2Parser_a_SOURCES += SLPv2MsgAssembler.c

AM_CFLAGS =
AM_CFLAGS += @COMMON_CFLAGS@
