################################################################################
### Copyright (C) 2008-2016,2020 VMware, Inc.  All rights reserved.
###
### This program is free software; you can redistribute it and/or modify
### it under the terms of version 2 of the GNU General Public License as
### published by the Free Software Foundation.
###
### This program is distributed in the hope that it will be useful,
### but WITHOUT ANY WARRANTY; without even the implied warranty of
### MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
### GNU General Public License for more details.
###
### You should have received a copy of the GNU General Public License
### along with this program; if not, write to the Free Software
### Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
################################################################################

noinst_LTLIBRARIES = libAppUtil.la

libAppUtil_la_SOURCES =
libAppUtil_la_SOURCES += appUtil.c
libAppUtil_la_SOURCES += appUtilX11.c

AM_CFLAGS =
AM_CFLAGS += @GTK_CPPFLAGS@
AM_CFLAGS += @GDK_PIXBUF_XLIB2_CPPFLAGS@

